# robotinics

./: README.md
Eletronic/arduino/: pinos arduino.txt
Eletronic/pcb/: Placa Controle Servo Motor.pcb  fonte.pcb  placa controladora de led.pcb  placa controladora de led2.pcb  placa de distribuição elétrica espelho.pcb  placa de distribuição elétrica.pcb
Eletronic/pcb wizzard/: Placa de Expansão tensão.drl  Placa de Expansão tensão.inf  Placa de Expansão tensão.pcb  placa carregadora bateria.drl  placa carregadora bateria.gb0  placa carregadora bateria.gb1  placa carregadora bateria.gb2  placa carregadora bateria.gb3  placa carregadora bateria.inf  placa carregadora bateria.pcb  placa controladora led.pcb
Mecanic/solidwork/: BRACO_BASE.SLDPRT  BRACO_BASE.STL  BRACO_EXTENSAO.SLDDRW  BRACO_EXTENSAO.SLDPRT  Base Robo.SLDASM  BaseGrande.SLDPRT  BaseGrande.STL  BaseGrandeDAlto.SLDPRT  BaseGrandeInf.SLDPRT  BaseGrandeSup.SLDPRT  BasePeqInf.SLDDRW  BasePeqInf.SLDPRT  BasePeqInf.STL  BasePequena.SLDPRT  BaseReta.SLDDRW  BaseReta.SLDPRT  BaseReta.STL  BaseRodas.SLDDRW  BaseRodas.SLDPRT  Capitulo04.SLDASM  Capitulo05.SLDASM  CorpoInf.SLDPRT  CorpoSup.SLDPRT  Fita.SLDDRW  Fita.SLDPRT  MONTAGEMCABECA.SLDASM  Peça1.SLDPRT  Peça2.SLDPRT  Peça2_b.SLDPRT  Peça3.SLDPRT  Placa Cabeca.SLDPRT  Prolongador.SLDDRW  Prolongador.SLDPRT  Sensor Corrente.SLDPRT  Sensor Tensão.SLDASM  (+18 more)
Software/raspberry/Output/arduino/srvMonitor2/srvMonitor2/: CMakeLists.txt  CMakeLists.txt~  main.cpp~  srvMonitor2.kdev4
Software/raspberry/Output/arduino/srvMonitor2/srvMonitor2/.kdev4/: srvMonitor2.kdev4
(+159 files in other folders)
